Fixed: Overflow result container

--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
 }
 
 body {
+    width: 100%;
+    height: 100%;
     font-family: 'Prompt', sans-serif;
     font-weight: bold;
 }
@@ -30,6 +32,13 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     /* Firefox */
     -moz-appearance: textfield;
+}
+
+.input-container {
+    margin: 40px;
+    position: relative;
+    display: flex;
+    justify-content: center;
 }
 
 .field-input {
@@ -58,6 +67,11 @@ input[type=number] {
     z-index: 0;
 }
 
+.field-label {
+    left: 50%;
+    transform: translateX(-74px);
+}
+
 .field-input:focus~.field-label {
     top: -.7rem;
     color: blue;
@@ -76,6 +90,19 @@ input[type=number] {
     font-size: var(--small-font-size);
     /* font-weight: 500; */
     z-index: 2;
+}
+
+.result-container {
+    /* display: inline-block; */
+    /* width: intrinsic; */
+    /* width: 100%; */
+    display: flex;
+    justify-content: center;
+}
+
+#result {
+    padding: 0 20px;
+    word-break: break-all;
 }
 
 #result div {
@@ -285,19 +312,9 @@ i:hover .tooltiptext {
 }
 
 @media (max-width: 750px),
-(max-height: 550px) {
-    body {
-        height: 100%;
-        width: 100%;
-        padding: 20px;
-    }
-    .input-container {
-        position: relative;
-        margin: 20px 20px 40px 20px;
-    }
-    #result {
-        margin: 0 20px;
-        word-wrap: break-word;
+(max-height: 650px) {
+    .group-box {
+        padding: 0 20px;
     }
     .tooltiptext::after {
         display: none;
@@ -314,23 +331,9 @@ i:hover .tooltiptext {
     }
 }
 
-@media (min-width: 751px) and (min-height: 551px) {
-    body {
-        width: 100%;
-        height: 100vh;
-        position: relative;
+@media (min-width: 751px) and (min-height: 651px) {
+    .box-container {
         display: flex;
-        align-items: center;
         justify-content: center;
-        flex-direction: column;
-    }
-    .input-container {
-        margin-bottom: 40px;
-        position: relative;
-        display: flex;
-        align-items: center;
-    }
-    #result {
-        white-space: nowrap;
     }
 }
